--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,24 @@
 language: android
-dist: trusty
 android:
   components:
-    # Uncomment the lines below if you want to
-    # use the latest revision of Android SDK Tools
-    # - tools
-    # - platform-tools
-
-    # The BuildTools version used by your project
+    - tools
     - build-tools-29.0.0
-
-    # The SDK version used to compile your project
     - android-28
+    - platform-tools
+    - extra-android-support # because I'm use support library
+    - extra-android-m2repository # because I'm use support library
+  licenses:
+    - '.+'
 
-    # Additional components
-    - extra-google-google_play_services
-    - extra-google-m2repository
-    - extra-android-m2repository
+sudo: required
 
-    # Specify at least one system image,
-    # if you need to run emulator(s) during your tests
-    - sys-img-armeabi-v8a-android-28
+jdk:
+  - oraclejdk8
+
+install: true
+
+before_script:
+  - chmod +x gradlew
+
+script:
+  - ./gradlew assembleRelease --stacktrace
