--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,52 @@
+sudo: false
+
+env:
+  global:
+    - ANDROID_API_LEVEL=28
+    - ANDROID_EMULATOR_LEVEL=23
+    - ANDROID_BUILD_TOOLS_VERSION=28.0.0
+    - ANDROID_ABI=armeabi-v7a
+    - ANDROID_TAG=google_apis
+    - ADB_INSTALL_TIMEOUT=20
+
 language: android
 android:
   components:
+    # Uncomment the lines below if you want to
+    # use the latest revision of Android SDK Tools
     - tools
-    - build-tools-29.0.0
+    - platform-tools
+    - android-$ANDROID_EMULATOR_LEVEL
+    - sys-img-armeabi-v7a-google_apis-$ANDROID_EMULATOR_LEVEL
+
+
+    # The BuildTools version used by your project
+    - build-tools-28.0.0
+
+    # The SDK version used to compile your project
     - android-28
-    - extra-android-support # because I'm use support library
-    - extra-android-m2repository # because I'm use support library
+
   licenses:
-    - '.+'
+    - android-sdk-preview-license-.+
+    - android-sdk-license-.+
+    - google-gdk-license-.+
+  before_install:
+    - yes | sdkmanager "platforms;android-27"
+    - yes | sdkmanager "platforms;android-28"
 
-sudo: required
-
-jdk:
-  - oraclejdk8
-
-install: true
 
 before_script:
-  - chmod +x gradlew
+  - touch local.properties
+  # Create and start emulator.
+  - echo no | android create avd --force -n test -t "android-"$ANDROID_EMULATOR_LEVEL --abi $ANDROID_ABI --tag $ANDROID_TAG
+  - emulator -avd test -no-window &
+  - android-wait-for-emulator
+  - adb shell input keyevent 82 &
 
-script:
-  - ./gradlew assembleRelease --stacktrace
+before_install:
+  - yes | sdkmanager "platforms;android-27"
+  - yes | sdkmanager "platforms;android-28"
+  - yes | sdkmanager "platforms;android-26"
+
+licenses:
+  - '.+'
