--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,28 @@
+env:
+  global:
+    - ANDROID_API_LEVEL=28
+    - ANDROID_EMULATOR_LEVEL=28
+    - ANDROID_BUILD_TOOLS_VERSION=28.0.0
+    - ANDROID_ABI=armeabi-v8a
+    - ANDROID_TAG=google_apis
+    - ADB_INSTALL_TIMEOUT=20
 sudo: false
 dist: trusty
 language: android
 android:
   components:
-    # Uncomment the lines below if you want to
-    # use the latest revision of Android SDK Tools
     - tools
     - platform-tools
     - android-28
 
-    # The BuildTools version used by your project
     - build-tools-28.0.0
-
+    - sys-img-armeabi-v8a-google_apis-28
 before_script:
   - touch local.properties
+  - echo no | android create avd --force -n test -t "android-"$ANDROID_EMULATOR_LEVEL --abi $ANDROID_ABI --tag $ANDROID_TAG
+  - emulator -avd test -no-window &
+  - android-wait-for-emulator
+  - adb shell input keyevent 82 &
 
 before_install:
   - yes | sdkmanager "platforms;android-28"
