--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ android:
     - sys-img-armeabi-v8a-google_apis-28
 before_script:
   - touch local.properties
-  - echo no | android create avd --force -n test -t "android-"$ANDROID_EMULATOR_LEVEL --abi $ANDROID_ABI --tag $ANDROID_TAG
+  - echo no | android create avd --force -n test -t "android-"$ANDROID_EMULATOR_LEVEL --tag $ANDROID_TAG
   - emulator -avd test -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
