--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ env:
     - ANDROID_API_LEVEL=28
     - ANDROID_EMULATOR_LEVEL=28
     - ANDROID_BUILD_TOOLS_VERSION=28.0.0
-    - ANDROID_ABI=armeabi-v7a
+    - ANDROID_ABI=arm64-v8a
     - ANDROID_TAG=google_apis
     - ADB_INSTALL_TIMEOUT=20
 sudo: false
@@ -19,7 +19,7 @@ android:
     - sys-img-armeabi-v8a-google_apis-28
 before_script:
   - touch local.properties
-  - echo no | android create avd --force -n test -t "android-"$ANDROID_EMULATOR_LEVEL --tag $ANDROID_TAG
+  - echo no | android create avd --force -n test -t "android-"$ANDROID_EMULATOR_LEVEL --abi $ANDROID_ABI --tag $ANDROID_TAG
   - emulator -avd test -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
