--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ env:
     - ANDROID_API_LEVEL=28
     - ANDROID_EMULATOR_LEVEL=28
     - ANDROID_BUILD_TOOLS_VERSION=28.0.0
-    - ANDROID_ABI=arm64-v8a
+    - ANDROID_ABI=google_apis/armeabi-v7a
     - ANDROID_TAG=google_apis
     - ADB_INSTALL_TIMEOUT=20
 sudo: false
