--- a/.travis.yml
+++ b/.travis.yml
@@ -1,31 +1,29 @@
-env:
-  global:
-    - ANDROID_API_LEVEL=28
-    - ANDROID_EMULATOR_LEVEL=28
-    - ANDROID_BUILD_TOOLS_VERSION=28.0.0
-    - ANDROID_ABI=google_apis/armeabi-v7a
-    - ANDROID_TAG=google_apis
-    - ADB_INSTALL_TIMEOUT=20
-sudo: false
-dist: trusty
+
 language: android
+
 android:
   components:
     - tools
     - platform-tools
+    - build-tools-28.0.3
     - android-28
+    - extra-android-support
+    - extra-android-m2repository
+    - extra-google-m2repository
 
-    - build-tools-28.0.0
-    - sys-img-armeabi-v8a-google_apis-28
-before_script:
-  - touch local.properties
-  - echo no | android create avd --force -n test -t "android-"$ANDROID_EMULATOR_LEVEL --abi $ANDROID_ABI --tag $ANDROID_TAG
-  - emulator -avd test -no-window &
-  - android-wait-for-emulator
-  - adb shell input keyevent 82 &
+jdk:
+  - oraclejdk8
 
-before_install:
-  - yes | sdkmanager "platforms;android-28"
+branches:
+  except:
+    - gh-pages
 
-licenses:
-  - '.+'
+notifications:
+  email: false
+
+cache:
+  directories:
+    - $HOME/.gradle
+
+script:
+  - chmod +x ./gradlew
