--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,5 @@
-
 language: android
-
+dist: trusty
 android:
   components:
     - tools
@@ -14,10 +13,6 @@ android:
 jdk:
   - oraclejdk8
 
-branches:
-  except:
-    - gh-pages
-
 notifications:
   email: false
 
@@ -25,6 +20,7 @@ cache:
   directories:
     - $HOME/.gradle
 
-script:
+before_install:
   - chmod +x ./gradlew
+script:
   - ./gradlew
