--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,8 @@ android:
     - extra-android-support
     - extra-android-m2repository
     - extra-google-m2repository
-
+licenses:
+  - '*.+'
 jdk:
   - oraclejdk8
 
