--- a/.travis.yml
+++ b/.travis.yml
@@ -27,4 +27,4 @@ before_script:
   - mkdir "$ANDROID_HOME/licenses" || true
   - echo "24333f8a63b6825ea9c5514f83c2829b004d1fee" > "$ANDROID_HOME/licenses/android-sdk-license"
 script:
-  - ./gradlew
+  - ./gradlew assembleDebug
